[package]
name = "lagoss-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
lagoss-runtime = { path = "../runtime" }
lagoss-runtime-http = { path = "../runtime_http" }
lagoss-runtime-isolate = { path = "../runtime_isolate" }
lagoss-runtime-utils = { path = "../runtime_utils" }
clap = { version = "4.3.19", features = ["derive", "env"] }
dialoguer = { version = "0.12.0", features = ["password"] }
indicatif = "0.18.1"
dirs = "5.0.1"
webbrowser = "0.8.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal"] }
hyper = { version = "1.0", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }
http-body-util = "0.1"
bytes = "1.5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3.3"
pathdiff = "0.2.1"
flume = "0.12.0"
chrono = "0.4.26"
notify = "6.0.1"
envfile = "0.2.1"
anyhow = "1.0.72"
urlencoding = "2.1.3"
