[package]
name = "lagoss-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
v8 = "145.0.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "time", "macros"] }
flume = "0.12.0"
httptest = "0.16.0"
lagoss-runtime-http = { path = "../runtime_http" }
lagoss-runtime-isolate = { path = "../runtime_isolate" }
log = { version = "0.4.19", features = ["std", "kv_unstable", "kv_unstable_serde"] }
serial_test = "2.0.0"
hyper = { version = "1.0", features = ["full"] }
http-body-util = "0.1"
bytes = "1.5"

[features]
default = []
ignore-snapshot = ["lagoss-runtime-isolate/ignore-snapshot"]
