[package]
name = "lagoss-runtime-isolate"
version = "0.1.0"
edition = "2021"

[dependencies]
v8 = "0.74.3"
tokio = { version = "1", features = ["rt-multi-thread"] }
futures = "0.3.28"
hyper = { version = "1.0" }
http-body-util = "0.1"
flume = "0.12.0"
anyhow = "1.0.72"
log = { version = "0.4.19", features = ["std", "kv_unstable"] }
linked-hash-map = "0.5.6"
flate2 = "1.0.26"
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
lagoss-runtime-v8-utils = { path = "../runtime_v8_utils" }
lagoss-runtime-http = { path = "../runtime_http" }
lagoss-runtime-crypto = { path = "../runtime_crypto" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[features]
default = []
ignore-snapshot = []
