[package]
name = "lagoss-serverless"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14.27", features = ["server", "http1", "runtime", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "signal"] }
tokio-util = { version = "0.7.8", features = ["rt"] }
lagoss-runtime = { path = "../runtime" }
lagoss-runtime-http = { path = "../runtime_http" }
lagoss-runtime-isolate = { path = "../runtime_isolate" }
lagoss-runtime-utils = { path = "../runtime_utils" }
lagoss-serverless-logger = { path = "../serverless_logger" }
lagoss-serverless-downloader = { path = "../serverless_downloader" }
lagoss-serverless-pubsub = { path = "../serverless_pubsub" }
flume = "0.11.0"
dotenv = "0.15.0"
serde_json = "1.0"
metrics = "0.21.1"
metrics-exporter-prometheus = { version = "0.17.0", default-features = false, features = ["http-listener"] }
log = { version = "0.4.19", features = ["std", "kv_unstable", "kv_unstable_serde"] }
anyhow = "1.0.72"
tokio-cron-scheduler = "0.9.4"
# TODO: use a specific version of dashmap when the inline feature is released
dashmap = { git = "https://github.com/xacrimon/dashmap.git", rev = "7f9522c5286cfbbb78df15f00f87b8331cb875d6", features = ["inline"] }
futures = "0.3.28"
clickhouse = { version = "0.14.0", features = ["inserter"] }
bytes = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.4.0", features = ["v4", "fast-rng"] }
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls"] }

# Jemalloc does not work on Windows
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[build-dependencies]
lagoss-runtime = { path = "../runtime" }
lagoss-runtime-isolate = { path = "../runtime_isolate" }
flume = "0.11.0"

[dev-dependencies]
serial_test = "2.0.0"
clickhouse = { version = "0.14.0", features = ["test-util"] }

[features]
default = []
test = ["lagoss-runtime-utils/test"]
