[package]
name = "lagoss-serverless-logger"
version = "0.1.0"
edition = "2021"

[dependencies]
flume = "0.12.0"
chrono = "0.4.26"
serde_json = "1.0"
axiom-rs = { version = "0.11.0", default-features = false, features = ["tokio", "rustls-tls"] }
log = { version = "0.4.19", features = ["std", "kv_unstable", "kv_unstable_serde"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = "1.0.215"
