[package]
name = "lagoss-wpt-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
lagoss-runtime = { path = "../runtime" }
lagoss-runtime-http = { path = "../runtime_http" }
lagoss-runtime-isolate = { path = "../runtime_isolate" }
flume = "0.11.0"
console = "0.16.0"
hyper = { version = "0.14.27", features = ["server"] }
